test/fixtures/typecheck/fail/UnknownTypeclassInstance.lam
module UnknownTypeclassInstance

data D = D

instance Foo D where
  bar = D
